fix mat-card layout

--- a/frontend/ameba-app/src/app/pages/config/config.component.html
+++ b/frontend/ameba-app/src/app/pages/config/config.component.html
@@ -1,4 +1,4 @@
-<div class="flex-center mat-padding-lg">
+<div class="config-container">
     <mat-card class="config-card">
         <mat-card-header>
             <mat-card-title>
