--- a/frontend/ameba-app/src/app/pages/game/game.component.scss
+++ b/frontend/ameba-app/src/app/pages/game/game.component.scss
@@ -112,6 +112,9 @@ mat-card-title {
     width: 30px;
     min-width: 30px;
     max-width: 30px;
+    height: 30px;
+    min-height: 30px;
+    max-height: 30px;
 }
 
 .game-row:first-child .game-cell {
@@ -144,9 +147,8 @@ mat-card-title {
 }
 
 .cell-icon {
-    font-size: 16px;
-    width: 16px;
-    height: 16px;
+    display: flex;
+    justify-self: center;
 }
 
 .food-icon {
