Fix Run 50 Steps

--- a/frontend/ameba-app/src/app/pages/game/game.component.html
+++ b/frontend/ameba-app/src/app/pages/game/game.component.html
@@ -103,14 +103,14 @@
                                 }
                                 Single Step
                             </button>
-                            <button mat-stroked-button color="primary" [disabled]="isMoving()" (click)="animatedStep()">
+                            <!-- <button mat-stroked-button color="primary" [disabled]="isMoving()" (click)="animatedStep()">
                                 @if (isMoving()) {
                                 <mat-spinner diameter="16"></mat-spinner>
                                 } @else {
                                 <mat-icon>auto_awesome</mat-icon>
                                 }
                                 Animated Step
-                            </button>
+                            </button> -->
                         </div>
 
                         <!-- Auto Movement Controls -->
